--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
+    "flutterwave-react-v3": "^1.3.2",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.486.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.0.17",
